# ultratimonel

./: .gitignore  .spec  README.md  main.py  project_maps.json.template  pyproject.toml  requirements.txt
docs/: 01-plan-general.md  02-triple-match.md  03-mcp-capabilities.md  04-soul-enforcement.md  05-preflight-flow.md  06-initialization-guide.md
openspec/: config.yaml
openspec/changes/archive/2026-06-28-ultratimonel-mvp/: archive-report.md  design.md  verify-report.md
openspec/changes/ultratimonel-mvp/: proposal.md  tasks.md
openspec/specs/: .index.md
openspec/specs/gate-persistence/: spec.md
openspec/specs/mission-gate/: spec.md
openspec/specs/soul-enforce/: spec.md
openspec/specs/triple-match/: spec.md
scripts/: deploy_soul.sh
tests/: test_context_extractor.py  test_gate_engine.py  test_integration.py  test_persistence.py  test_server.py  test_triple_match.py
ultratimonel/: __init__.py  bridge.py  context_extractor.py  gate_engine.py  mcp_client.py  persistence.py  server.py  triple_match.py
