[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultratimonel"
version = "1.0.1"
description = "Pre-flight gate enforcement MCP server for Hermes Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "erniomaldo"},
]
dependencies = [
    "fastmcp",
    "httpx",  # solo para Deck gate (HTTP MCP remoto); agentmemory/checkpoint usan stdio
]
keywords = ["mcp", "hermes", "gate", "preflight", "agent"]

[project.urls]
Homepage = "https://github.com/erniomaldo/ultratimonel"

[tool.setuptools]
packages = ["ultratimonel"]
